--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-content-loader": "^4.3.4",
     "react-dom": "^16.12.0",
     "react-rater": "^5.1.1",
     "react-router-dom": "^5.1.2",
